--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
 # Sphinx documentation
 docs/_build/
 
@@ -38,6 +43,13 @@ venv.bak/
 # SublimeText
 *.sublime-project
 *.sublime-workspace
+
+# Terraform
+.terraform.lock*
+.terraform/
+*.tfstate*
+*.tfvars
+*.log
 
 # Vim
 [._]*.un~
