--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -1,9 +1,9 @@
 stages:
   - Test
   - Pact-publish
-  - Report
   - Pact-check
   - Build
+  - Report
   - Deploy
   - Pact-tag
   - Sentry
@@ -11,10 +11,8 @@ stages:
 variables:
   COMPOSE_DOCKER_CLI_BUILD: 1
   DOCKER_BUILDKIT: 1
-  PACT_CONSUMER_NAME: {{cookiecutter.project_slug}}-frontend
-  SENTRY_ORG: $SENTRY_ORG
-  SENTRY_PROJECT_NAME: {{cookiecutter.project_slug}}-frontend
-  SENTRY_URL:  $SENTRY_URL
+  PACT_CONSUMER_NAME: {{ cookiecutter.project_slug }}-{{ cookiecutter.service_slug }}
+  SENTRY_PROJECT_NAME: {{ cookiecutter.project_slug }}-{{ cookiecutter.service_slug }}
   VERSION_BEFORE_REF: $CI_COMMIT_BEFORE_SHA
   VERSION_REF: $CI_COMMIT_SHA
 
@@ -29,7 +27,7 @@ sentry_release:
   services:
     - docker:20-dind
   rules:
-    - if: $SENTRY_DSN && ($CI_COMMIT_BRANCH == "develop" ||  $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_TAG) && $CI_JOB_TRIGGERED != "true"
+    - if: $SENTRY_DSN && ($CI_COMMIT_BRANCH == "develop" || $CI_COMMIT_BRANCH == "main" || $CI_COMMIT_TAG)
   script:
     - RELEASE_START=$(date +%s)
     - >
@@ -51,28 +49,33 @@ test:
   services:
     - docker:20-dind
   variables:
-    FRONTEND_IMAGE_NAME: "gitlabci_{{cookiecutter.project_slug}}_frontend"
-    FRONTEND_IMAGE_TAG: "$CI_JOB_NAME-$CI_JOB_ID"
-    FRONTEND_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_frontend"
+    SERVICE_IMAGE_NAME: "gitlabci_{{ cookiecutter.project_slug }}_{{ cookiecutter.service_slug }}"
+    SERVICE_IMAGE_TAG: "$CI_JOB_NAME-$CI_JOB_ID"
+    SERVICE_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_{{ cookiecutter.service_slug }}"
   script:
     - echo $CI_COMMIT_TAG $CI_COMMIT_BRANCH
     - >
       docker build
-      --tag=$FRONTEND_IMAGE_NAME:$FRONTEND_IMAGE_TAG
+      --tag=$SERVICE_IMAGE_NAME:$SERVICE_IMAGE_TAG
       --file=docker/remote.Dockerfile
       --target=test .
-    - docker run --name=$FRONTEND_CONTAINER_NAME $FRONTEND_IMAGE_NAME:$FRONTEND_IMAGE_TAG
-    - docker cp $FRONTEND_CONTAINER_NAME:/temp/coverage .
-    - if [ "$PACT_ENABLED" == true ]; then docker cp $FRONTEND_CONTAINER_NAME:/temp/__tests__/pacts .; fi
+    - docker run --name=$SERVICE_CONTAINER_NAME $SERVICE_IMAGE_NAME:$SERVICE_IMAGE_TAG
+    - docker cp $SERVICE_CONTAINER_NAME:/temp/coverage .
+    - docker cp $SERVICE_CONTAINER_NAME:/temp/junit.xml ./junit.xml
+    - if [ "$PACT_ENABLED" == true ]; then docker cp $SERVICE_CONTAINER_NAME:/temp/__tests__/pacts .; fi
   after_script:
-    - docker stop $FRONTEND_CONTAINER_NAME
-    - docker container rm $FRONTEND_CONTAINER_NAME
+    - docker stop $SERVICE_CONTAINER_NAME
+    - docker container rm $SERVICE_CONTAINER_NAME
   coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
   artifacts:
     paths:
       - coverage
       - pacts
+    reports:
+      junit:
+      - junit.xml
     expire_in: 1 day
+    when: always
 
 publish:
   stage: Pact-publish
@@ -80,8 +83,11 @@ publish:
     name: docker:20
   services:
     - docker:20-dind
+  needs: ["test"]
   rules:
-    - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      when: never
+    - if: $PACT_ENABLED == "true"
   before_script:
     - if [ "$CI_COMMIT_BRANCH" ]; then PACT_CONSUMER_TAG="branch:$CI_COMMIT_BRANCH"; else PACT_CONSUMER_TAG="tag:$CI_COMMIT_TAG"; fi
   script:
@@ -94,16 +100,15 @@ publish:
       pactfoundation/pact-cli:latest-node14 pact-broker publish /pacts
       --consumer-app-version=$VERSION_REF
       --tag=$PACT_CONSUMER_TAG
-  dependencies:
-    - test
 
 pages:
   stage: Report
   image: busybox
+  needs: ["test"]
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   script:
-    - mv coverage/lcov-report/* public
+    - mv coverage/tests/lcov-report/* public
   artifacts:
     paths:
       - public
@@ -111,12 +116,11 @@ pages:
 .can-i-deploy:
   stage: Pact-check
   allow_failure: false
-  dependencies:
-    - publish
   image:
     name: docker:20
   services:
     - docker:20-dind
+  needs: ["publish"]
   script:
     - >
       docker run --rm
@@ -131,25 +135,25 @@ pages:
 can-i-deploy_development:
   extends: .can-i-deploy
   rules:
-    - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true"
+    - if: $PACT_ENABLED == "true" && $CI_COMMIT_BRANCH == "develop"
       variables:
         DEPLOY_ENV: development
 
-can-i-deploy_integration:
+can-i-deploy_staging:
   extends: .can-i-deploy
   rules:
-    - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
+    - if: $PACT_ENABLED == "true" && $CI_COMMIT_BRANCH == "main"
       variables:
-        DEPLOY_ENV: integration
+        DEPLOY_ENV: staging
 
 can-i-deploy_production:
   extends: .can-i-deploy
   rules:
-    - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true"
+    - if: $PACT_ENABLED == "true" && $CI_COMMIT_TAG
       variables:
         DEPLOY_ENV: production
 
-build:
+.build:
   stage: Build
   image: docker:20
   services:
@@ -167,98 +171,145 @@ build:
       --build-arg SENTRY_DSN=$SENTRY_DSN
       --build-arg SENTRY_ORG=$SENTRY_ORG
       --build-arg SENTRY_URL=$SENTRY_URL
+      --build-arg SENTRY_PROJECT_NAME=$SENTRY_PROJECT_NAME
       --pull .
     - docker push $CI_REGISTRY/$CI_PROJECT_PATH:$VERSION_REF
   after_script:
     - docker logout $CI_REGISTRY
+
+build_development:
+  extends: .build
+  needs:
+    - job: can-i-deploy_development
+      optional: true
+    - job: test
   rules:
-    - if: ($CI_COMMIT_BRANCH == "develop" ||  $CI_COMMIT_BRANCH == "master" ||  $CI_COMMIT_TAG) && $CI_JOB_TRIGGERED != "true"
+    - if: $CI_COMMIT_BRANCH == "develop"
+
+build_staging:
+  extends: .build
+  needs:
+    - job: can-i-deploy_staging
+      optional: true
+    - job: test
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main"
+
+build_production:
+  extends: .build
+  needs:
+    - job: can-i-deploy_production
+      optional: true
+    - job: test
+  rules:
+    - if: $CI_COMMIT_TAG
 
 .development:
   environment:
     name: Development
-    url: https://dev.{{cookiecutter.project_slug}}.com
-  rules:
-    - if: $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true"
-      variables:
-        DEPLOY_ENVIRONMENT: development
+    url: {{ cookiecutter.project_url_dev }}
 
-.integration:
+.staging:
   environment:
-    name: Integration
-    url: https://test.{{cookiecutter.project_slug}}.com
-  rules:
-    - if: $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
-      variables:
-        DEPLOY_ENVIRONMENT: integration
+    name: Staging
+    url: {{ cookiecutter.project_url_stage }}
 
 .production:
   environment:
     name: Production
-    url:  https://www.{{cookiecutter.project_slug}}.com
-  rules:
-    - if: $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true"
-      variables:
-        DEPLOY_ENVIRONMENT: production
+    url:  {{ cookiecutter.project_url_prod }}
 
-.deploy-base:
+.deploy:
   stage: Deploy
   image:
     name: docker:20
   services:
     - docker:20-dind
+  variables:
+    TF_ROOT: ${CI_PROJECT_DIR}/terraform
+  before_script:
+    - export TF_VAR_service_container_image=${CI_REGISTRY_IMAGE}:${VERSION_REF}
   script:
     - >
-      docker run --rm -v $PWD:/app -v $KUBE_CA_PEM_FILE:$KUBE_CA_PEM_FILE
-      -e KUBECONFIG=/tmp/.kube/config
-      -e DEPLOY_ENVIRONMENT
-      -e DEPLOY_VERSION
-      -e KUBE_CA_PEM_FILE
-      -e KUBE_TOKEN
-      -e KUBE_URL
-      --entrypoint=""
-      bitnami/kubectl:latest /app/scripts/deploy.sh
-
-.deploy:
-  extends: .deploy-base
-  before_script:
-    - export DEPLOY_VERSION=$VERSION_REF
+      docker run --rm
+      -u `id -u`
+      -v ${PWD}:${PWD}
+      -w ${PWD}
+      -e CI_JOB_TOKEN
+      -e TF_ADDRESS=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/{{ cookiecutter.project_slug }}_${ENVIRONMENT_SLUG}
+      -e TF_ROOT
+      -e TF_VAR_digitalocean_token="${DIGITALOCEAN_TOKEN}"
+      -e TF_VAR_environment="${CI_ENVIRONMENT_NAME}"
+      -e TF_VAR_internal_backend_url="${INTERNAL_BACKEND_URL}"
+      -e TF_VAR_internal_service_port="${FRONTEND_SERVICE_PORT}"
+      -e TF_VAR_project_url="${CI_ENVIRONMENT_URL}"
+      -e TF_VAR_service_container_image
+      -e TF_VAR_service_container_port
+      -e TF_VAR_service_replicas
+      -e TF_VAR_stack_slug="${STACK_SLUG}"
+      registry.gitlab.com/gitlab-org/terraform-images/stable:latest ./scripts/deploy.sh
+  artifacts:
+    name: plan
+    paths:
+      - ${TF_ROOT}/plan.cache
+    reports:
+      terraform: ${TF_ROOT}/plan.json
 
 deploy_development:
   extends:
     - .development
     - .deploy
+  needs: ["build_development"]
+  rules:
+    - if: $CI_COMMIT_BRANCH == "develop"
+      variables:
+        ENVIRONMENT_SLUG: dev
+        STACK_SLUG: "${STACK_SLUG_DEV}"
 
-deploy_integration:
+deploy_staging:
   extends:
-    - .integration
+    - .staging
     - .deploy
+  needs: ["build_staging"]
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main"
+      variables:
+        ENVIRONMENT_SLUG: stage
+        STACK_SLUG: "${STACK_SLUG_STAGE}"
 
 deploy_production:
   extends:
     - .production
     - .deploy
+  needs: ["build_production"]
+  rules:
+    - if: $CI_COMMIT_TAG
+      variables:
+        ENVIRONMENT_SLUG: prod
+        STACK_SLUG: "${STACK_SLUG_PROD}"
 
 .rollback:
-  extends: .deploy-base
+  extends: .deploy
   before_script:
-    - export DEPLOY_VERSION=$VERSION_BEFORE_REF
+    - export TF_VAR_service_container_image=${CI_REGISTRY_IMAGE}:${VERSION_BEFORE_REF}
 
 rollback_development:
   extends:
     - .development
     - .rollback
+  needs: ["deploy_development"]
   rules:
-    - if: $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true"
+    - if: $CI_COMMIT_BRANCH == "develop"
       when: manual
       allow_failure: true
 
-rollback_integration:
+rollback_staging:
   extends:
-    - .integration
+    - .staging
     - .rollback
+  needs: ["deploy_staging"]
   rules:
-    - if: $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
+    - if: $CI_COMMIT_BRANCH == "main"
       when: manual
       allow_failure: true
 
@@ -266,8 +317,9 @@ rollback_production:
   extends:
     - .production
     - .rollback
+  needs: ["deploy_production"]
   rules:
-    - if: $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true"
+    - if: $CI_COMMIT_TAG
       when: manual
       allow_failure: true
 
@@ -280,8 +332,9 @@ rollback_production:
 
 create-version-tag_development:
   extends: .create-version-tag
+  needs: ["deploy_development"]
   rules:
-    - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true"
+    - if: $PACT_ENABLED == "true" && $CI_COMMIT_BRANCH == "develop"
   script:
     - >
       docker run --rm
@@ -293,10 +346,11 @@ create-version-tag_development:
       --version $VERSION_REF
       --tag "env:development"
 
-create-version-tag_integration:
+create-version-tag_staging:
   extends: .create-version-tag
+  needs: ["deploy_staging"]
   rules:
-    - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
+    - if: $PACT_ENABLED == "true" && $CI_COMMIT_BRANCH == "main"
   script:
     - >
       docker run --rm
@@ -306,12 +360,13 @@ create-version-tag_integration:
       pactfoundation/pact-cli:latest-node14 pact-broker create-version-tag
       --pacticipant $PACT_CONSUMER_NAME
       --version $VERSION_REF
-      --tag "env:integration"
+      --tag "env:staging"
 
 create-version-tag_production:
   extends: .create-version-tag
+  needs: ["deploy_production"]
   rules:
-    - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true"
+    - if: $PACT_ENABLED == "true" && $CI_COMMIT_TAG
   script:
     - >
       docker run --rm
@@ -340,24 +395,27 @@ create-version-tag_production:
 
 sentry_success_development:
   extends: .sentry_deploy_success
+  needs: ["deploy_development"]
   rules:
-    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true"
+    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "develop"
       when: on_success
       variables:
         SENTRY_ENV: Development
 
-sentry_success_integration:
+sentry_success_staging:
   extends: .sentry_deploy_success
+  needs: ["deploy_staging"]
   rules:
-    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
+    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "main"
       when: on_success
       variables:
-        SENTRY_ENV: Integration
+        SENTRY_ENV: Staging
 
 sentry_success_production:
   extends: .sentry_deploy_success
+  needs: ["deploy_production"]
   rules:
-    - if: $SENTRY_DSN && $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true"
+    - if: $SENTRY_DSN && $CI_COMMIT_TAG
       when: on_success
       variables:
         SENTRY_ENV: Production
@@ -379,23 +437,23 @@ sentry_success_production:
 sentry_failure_development:
   extends: .sentry_deploy_failure
   rules:
-    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true"
+    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "develop"
       when: on_failure
       variables:
         SENTRY_ENV: Development
 
-sentry_failure_integration:
+sentry_failure_staging:
   extends: .sentry_deploy_failure
   rules:
-    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
+    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "main"
       when: on_failure
       variables:
-        SENTRY_ENV: Integration
+        SENTRY_ENV: Staging
 
 sentry_failure_production:
   extends: .sentry_deploy_failure
   rules:
-    - if: $SENTRY_DSN && $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true"
+    - if: $SENTRY_DSN && $CI_COMMIT_TAG
       when: on_failure
       variables:
         SENTRY_ENV: Production
