--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -1,63 +1,68 @@
 {
-  "name": "{{cookiecutter.project_slug}}",
+  "name": "{{ cookiecutter.project_slug }}",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
     "start": "node server.js",
-    "test": "npx jest --testPathIgnorePatterns=pact/contracts --testEnvironment=jsdom --detectOpenHandles",
-    "pact": "npx jest pact/contracts --detectOpenHandles",
     "eslint": "npx eslint . --fix-dry-run",
-    "audit:fix": "npm i --package-lock-only && npm audit fix && rm yarn.lock && yarn import && rm package-lock.json",
-    "coverage": "yarn pact --coverage --passWithNoTests --coverageDirectory ./coverage/pacts && yarn test --coverage --coverageDirectory ./coverage/tests && npx istanbul-merge --out ./coverage/coverage-final.json ./coverage/pacts/coverage-final.json ./coverage/tests/coverage-final.json && npx istanbul report --include ./coverage/coverage-final.json --dir ./coverage lcov clover json-summary && rm -rf ./coverage/pacts && rm -rf ./coverage/tests"
+    "pact": "npx jest pact/contracts --detectOpenHandles",
+    "test": "npx jest --testPathIgnorePatterns=pact/contracts --testEnvironment=jsdom --detectOpenHandles",
+    "ci:unit-test": "npx jest --detectOpenHandles --testPathIgnorePatterns=pact/contracts --testEnvironment=jsdom --coverage --coverageDirectory ./coverage/tests --ci --reporters=default --reporters=jest-junit",
+    "ci:contract-test": "npx jest pact/contracts --detectOpenHandles --coverage --passWithNoTests --coverageDirectory ./coverage/pacts",
+    "coverage": "npx istanbul-merge --out ./coverage/coverage-final.json ./coverage/pacts/coverage-final.json ./coverage/tests/coverage-final.json && npx istanbul report --include ./coverage/coverage-final.json --dir ./coverage text-summary text json-summary"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.2",
-    "@sentry/nextjs": "^6.13.3",
-    "axios": "^0.23.0",
+    "@reduxjs/toolkit": "^1.8.0",
+    "@sentry/nextjs": "^6.18.2",
+    "axios": "^0.26.0",
     "basic-auth": "^2.0.1",
-    "express": "^4.17.1",
-    "next": "^11.1.2",
+    "express": "^4.17.3",
+    "next": "^12.1.0",
     "next-redux-wrapper": "^7.0.5",
     "nookies": "^2.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "react-redux": "^7.2.5",
-    "redux": "^4.1.1",
-    "styled-components": "^5.3.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^11.1.2",
-    "@pact-foundation/pact": "^9.16.4",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.2",
+    "@babel/core": "^7.17.5",
+    "@next/eslint-plugin-next": "^12.1.0",
+    "@pact-foundation/pact": "^9.17.2",
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
     "@types/basic-auth": "^1.1.3",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.1",
-    "@types/react": "^17.0.30",
-    "@types/react-redux": "^7.1.19",
-    "@types/styled-components": "^5.1.15",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "@types/react-redux": "^7.1.23",
+    "@types/styled-components": "^5.1.24",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "axios-mock-adapter": "^1.20.0",
-    "babel-plugin-styled-components": "^1.13.2",
-    "eslint": "^8.0.1",
-    "eslint-config-next": "^11.1.2",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
+    "babel-plugin-styled-components": "^2.0.6",
+    "eslint": "8.10.0",
+    "eslint-config-next": "^12.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.26.1",
-    "istanbul-merge": "^1.1.1",
-    "jest": "^27.2.5",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.29.3",
+    "jest": "^27.5.1",
+    "jest-junit": "^13.0.0",
     "jest-pact": "^0.9.1",
-    "prettier": "^2.4.1",
-    "typescript": "^4.4.4"
+    "prettier": "^2.5.1",
+    "typescript": "^4.6.2",
+    "webpack": "^5.63.0"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -88,33 +93,41 @@
     "extends": [
       "eslint:recommended",
       "next",
-      "plugin:react/recommended",
       "plugin:@typescript-eslint/recommended",
+      "plugin:react/recommended",
       "prettier"
     ],
     "rules": {
-      "prettier/prettier": "error",
       "@typescript-eslint/explicit-module-boundary-types": "off",
-      "react/prop-types": 0,
-      "react/no-unescaped-entities": 0,
-      "camelcase": [
-        2,
-        {
-          "properties": "always"
-        }
-      ],
       "@typescript-eslint/no-unused-vars": [
         "warn",
         {
           "argsIgnorePattern": "^_",
           "varsIgnorePattern": "^_"
         }
-      ]
+      ],
+      "camelcase": [
+        2,
+        {
+          "properties": "always"
+        }
+      ],
+      "prettier/prettier": "error",
+      "react/no-unescaped-entities": 0,
+      "react/prop-types": 0
     }
   },
   "jest": {
     "testMatch": [
       "**/__tests__/**/*.test.ts?(x)"
+    ],
+    "setupFilesAfterEnv": [
+      "./__tests__/setupTests.ts"
+    ],
+    "collectCoverageFrom": [
+      "components/**/*.{ts,tsx}",
+      "utils/hooks/*.{ts,tsx}",
+      "utils/*.{ts,tsx}"
     ],
     "moduleNameMapper": {
       "@/(.*)$": "<rootDir>/$1"
