--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -135,17 +135,16 @@ test:
     - docker:20-dind
   needs: []
   variables:
+    COMPOSE_PROJECT_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}"
+    SERVICE_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_frontend"
     SERVICE_IMAGE_NAME: "gitlabci_{{ cookiecutter.project_slug }}_{{ cookiecutter.service_slug }}"
     SERVICE_IMAGE_TAG: "${CI_JOB_NAME}-${CI_JOB_ID}"
-    SERVICE_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_{{ cookiecutter.service_slug }}"
   before_script:
-    - export COMPOSE_FILE=docker-compose.yaml:docker-compose-volumes.yaml
+    - export COMPOSE_FILE=docker-compose.yaml:docker-compose/volumes.yaml
+    - mkdir pacts
   script:
     - docker-compose build --quiet consumer
     - docker-compose run --name ${SERVICE_CONTAINER_NAME} consumer
-    - docker cp ${SERVICE_CONTAINER_NAME}:/app/coverage .
-    - docker cp ${SERVICE_CONTAINER_NAME}:/app/junit.xml ./junit.xml
-    - if [ "${PACT_ENABLED}" == true ]; then docker cp ${SERVICE_CONTAINER_NAME}:/app/pacts .; fi
   after_script:
     - docker-compose down --volumes --remove-orphans
   coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
@@ -157,7 +156,6 @@ test:
       junit:
       - junit.xml
     expire_in: 1 day
-    when: always
 
 .pact:
   image:
@@ -308,14 +306,19 @@ build_production:
     COMPOSE_PROJECT_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}"
     SERVICE_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_e2e"
   before_script:
+    - >
+      if [ "${PACT_ENABLED}" == "true" ];
+      then
+        export COMPOSE_FILE=docker-compose/consumer-image.yaml:docker-compose/services.yaml:docker-compose/provider.yaml;
+      else
+        export COMPOSE_FILE=docker-compose/consumer-image.yaml:docker-compose/services.yaml;
+      fi
     - export CONSUMER_IMAGE=${CI_REGISTRY}/${CI_PROJECT_PATH}:${VERSION_REF}
-    - export COMPOSE_FILE=docker-compose-image.yaml:docker-compose-services.yaml
     - docker login -u gitlab-ci-token -p ${CI_BUILD_TOKEN} ${CI_REGISTRY}
   script:
     - docker-compose build --quiet consumer
     - docker-compose up -d proxy
     - docker-compose run --name ${SERVICE_CONTAINER_NAME} cypress
-    - docker cp ${SERVICE_CONTAINER_NAME}:/app/cypress-screenshots ./cypress
   after_script:
     - docker cp ${SERVICE_CONTAINER_NAME}:/app/cypress-screenshots ./screenshots
     - docker-compose down --volumes --remove-orphans
@@ -324,29 +327,44 @@ build_production:
     paths:
       - screenshots
     expire_in: 1 day
-    when: always
 
 e2e_development:
   extends:
     - .development
     - .e2e
   needs: ["test", "build_development"]
+  rules:
+    - &skip-e2e-rule
+      if: $SKIP_E2E == "true"
+      when: never
+    - <<: *push-only
+    - *development-rules
 
 e2e_staging:
   extends:
     - .staging
     - .e2e
   needs: ["test", "build_staging"]
+  rules:
+    - <<: *skip-e2e-rule
+    - <<: *push-only
+    - *staging-rules
 
 e2e_production:
   extends:
     - .production
     - .e2e
   needs: ["test", "build_production"]
+  rules:
+    - <<: *skip-e2e-rule
+    - <<: *push-only
+    - *production-rules
 
 e2e_manual:
   rules:
-    - if: $CI_COMMIT_REF_PROTECTED == "true" || $CI_PIPELINE_SOURCE != "push"
+    - <<: *skip-e2e-rule
+    - <<: *push-only
+    - if: $CI_COMMIT_REF_PROTECTED == "true"
       when: never
     - when: manual
   extends:
@@ -356,7 +374,13 @@ e2e_manual:
     REACT_ENVIRONMENT: 'production'
   needs: ["test"]
   before_script:
-    - export COMPOSE_FILE=docker-compose.yaml:docker-compose-services.yaml
+    - >
+      if [ "${PACT_ENABLED}" == "true" ];
+      then
+        export COMPOSE_FILE=docker-compose.yaml:docker-compose/services.yaml:docker-compose/provider.yaml;
+      else
+        export COMPOSE_FILE=docker-compose.yaml:docker-compose/services.yaml;
+      fi
 
 .deploy:
   stage: Deploy
