--- a/{{cookiecutter.project_dirname}}/.env_template
+++ b/{{cookiecutter.project_dirname}}/.env_template
@@ -1,4 +1,4 @@
-COMPOSE_FILE=docker-compose.yaml:docker-compose-volumes.yaml:docker-compose-services.yaml
+COMPOSE_FILE=docker-compose.yaml:docker-compose/volumes.yaml:docker-compose/services.yaml:docker-compose/provider.yaml
 INTERNAL_BACKEND_URL=http://provider:8000
 NEXT_PUBLIC_PROJECT_URL=http://localhost:8443
 REACT_ENVIRONMENT=Development
