--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -137,6 +137,7 @@ test:
   variables:
     COMPOSE_PROJECT_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}"
     SERVICE_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_frontend"
+    SERVICE_DOCKER_FILE: "docker/test.Dockerfile"
     SERVICE_IMAGE_NAME: "gitlabci_{{ cookiecutter.project_slug }}_{{ cookiecutter.service_slug }}"
     SERVICE_IMAGE_TAG: "${CI_JOB_NAME}-${CI_JOB_ID}"
   before_script:
@@ -370,8 +371,9 @@ e2e_manual:
   extends:
     - .e2e
   variables:
-    SERVICE_DOCKER_FILE: "docker/remote.Dockerfile"
+    NEXT_PUBLIC_PROJECT_URL: 'https://proxy:8443'
     REACT_ENVIRONMENT: 'production'
+    SERVICE_DOCKER_FILE: "docker/remote.Dockerfile"
   needs: ["test"]
   before_script:
     - >
